# prophet

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml  startup_stm32l4r9xx.c  stm32l4r9xx.ld
app/: led.c  main.c
app/datalog/: .cproject  README.md  startup_stm32l4r9xx.s  stm32l4r9zitx_flash.ld  syscalls.c
app/datalog/HSDCore/: Release_Notes.html  Release_Notes.md
app/datalog/HSDCore/Inc/: HSDCore.h  HSD_json.h  HSD_tags.h  com_manager.h  device_description.h  hts221_app.h  iis2dh_app.h  iis2mdc_app.h  iis3dwb_app.h  imp23absu_app.h  imp34dt05_app.h  ism330dhcx_app.h  lps22hh_app.h  mallocstats.h  sensors_manager.h  stts751_app.h
app/datalog/HSDCore/Src/: HSD_json.c  HSD_tags.c  com_manager.c  device_description.c  hts221_app.c  iis2dh_app.c  iis2mdc_app.c  iis3dwb_app.c  imp23absu_app.c  imp34dt05_app.c  ism330dhcx_app.c  lps22hh_app.c  sensors_manager.c  stts751_app.c
app/datalog/HSDCore/inc/: com_manager.h  device_description.h  hts221_app.h
app/datalog/HSDCore/src/: device_description.c  iis3dwb_app.c  sensors_manager.c
app/datalog/conf/: FreeRTOSConfig.h  HSDCoreConfig.h  ffconf.h
app/datalog/core/inc/: HSDCore.h  HSD_json.h  HSD_tags.h  hts221_app.h  iis2dh_app.h  iis2mdc_app.h  iis3dwb_app.h  ism330dhcx_app.h  lps22hh_app.h  mallocstats.h  sensors_manager.h  stts751_app.h
app/datalog/core/src/: HSD_json.c  HSD_tags.c  com_manager.c  hts221_app.c  iis2dh_app.c  iis2mdc_app.c  iis3dwb_app.c  ism330dhcx_app.c  lps22hh_app.c  sensors_manager.c  stts751_app.c
app/datalog/inc/: AutoMode.h  AutoModeModel.h  AutoModeTask.h  FreeRTOSConfig.h  HSDCoreConfig.h  OTA.h  STWIN_conf.h  STWIN_errno.h  apperror.h  ble_comm_manager.h  ble_comm_transfer_protocol.h  ble_config_service.h  ble_list_utils.h  bluenrg_conf.h  cpu_utils.h  ffconf.h  hci_tl_interface.h  main.h  sd_diskio.h  sdcard_manager.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  systypes.h  usbd_conf.h  usbd_desc.h  usbd_wcid_interface.h
app/datalog/src/: AutoModeTask.c  Automode.c  OTA.c  ble_comm_manager.c  ble_comm_transfer_protocol.c  ble_config_service.c  cpu_utils.c  hci_tl_interface.c  main.c  sd_diskio.c  sdcard_manager.c  stm32l4xx_it.c  syscalls.c  system_stm32l4xx.c  usbd_conf.c  usbd_desc.c  usbd_wcid_interface.c
app/prophet/: led.c  main.c  startup_stm32l4r9xx.c  syscalls.c
app/prophet/inc/: STWIN_conf.h  STWIN_errno.h  es_wifi_conf.h  led.h  main.h  stm32l4xx_hal_conf.h
app/simple/: Makefile  simple.c
bsp/board/stwin/: STWIN_audio.c  STWIN_bc.c  STWIN_conf_template.h  STWIN_errno_template.h  STWIN_motion_sensors_ex.c  STWIN_motion_sensors_ex.h  STWIN_sd.c  STWIN_sd.h  hci_tl_interface_template.c
drivers/board/STWIN/: STWIN_motion_sensors_ex.c
drivers/board/STWIN/inc/: STWIN.h  STWIN_audio.h  STWIN_bc.h  STWIN_bus.h  STWIN_env_sensors.h  STWIN_env_sensors_ex.h  STWIN_motion_sensors.h  STWIN_wifi.h
drivers/board/STWIN/src/: STWIN.c  STWIN_bus.c  STWIN_env_sensors.c  STWIN_env_sensors_ex.c  STWIN_motion_sensors.c  STWIN_wifi.c
drivers/components/common/: audio.h
drivers/components/stts751/: stts751.c  stts751.h  stts751_reg.c  stts751_reg.h
drivers/cpu/: system_stm32l4xx.h
drivers/hal/stm32l4xx/inc/: stm32l4xx_hal.h
drivers/hal/stm32l4xx/src/: stm32l4xx_ll_adc.c  stm32l4xx_ll_comp.c  stm32l4xx_ll_crc.c  stm32l4xx_ll_crs.c  stm32l4xx_ll_dac.c  stm32l4xx_ll_dma.c  stm32l4xx_ll_dma2d.c  stm32l4xx_ll_exti.c  stm32l4xx_ll_gpio.c  stm32l4xx_ll_i2c.c  stm32l4xx_ll_lptim.c  stm32l4xx_ll_lpuart.c  stm32l4xx_ll_opamp.c  stm32l4xx_ll_pka.c  stm32l4xx_ll_pwr.c  stm32l4xx_ll_rcc.c  stm32l4xx_ll_rng.c  stm32l4xx_ll_rtc.c  stm32l4xx_ll_spi.c  stm32l4xx_ll_swpmi.c  stm32l4xx_ll_tim.c  stm32l4xx_ll_usart.c
middleware/st/BlueNRG-2/includes/: bluenrg1_gatt_aci.h
middleware/st/STM32_USB_Device_Library/Class/SensorStreaming_WCID/: Release_Notes.html  Release_Notes.md
middleware/st/STM32_USB_Device_Library/Class/SensorStreaming_WCID/Src/: usbd_wcid_streaming.c
simple/: Makefile  simple.c
utils/STWIN_acquisition_examples/STWIN_00001/: AcquisitionInfo.json  DeviceConfig.json
utils/STWIN_acquisition_examples/STWIN_00002/: AcquisitionInfo.json  DeviceConfig.json
utils/STWIN_acquisition_examples/STWIN_00003/: AcquisitionInfo.json  DeviceConfig.json
utils/STWIN_acquisition_examples/STWIN_20210205_15_47_16/: AcquisitionInfo.json  DeviceConfig.json
utils/STWIN_acquisition_examples/STWIN_20210205_16_06_21/: AcquisitionInfo.json  DeviceConfig.json
utils/STWIN_config_examples/: DeviceConfig.json  ISM330DHCX.json
utils/data_logger/: CMakeLists.txt  DeviceConfig.json  Makefile  main.cpp  main.h
utils/data_logger/setup/: 30-hsdatalog.rules  setup.sh  udev_removal.sh
utils/datalogger/: main.cpp  script.sh
utils/python_sdk/: hsdatalog_check_dummy_data.py  hsdatalog_cli.py  hsdatalog_data_export.py  hsdatalog_data_export_by_tags.py  hsdatalog_dataframes.py  hsdatalog_plot.py  hsdatalog_to_nanoedge.py  hsdatalog_to_unico.py  hsdatalog_to_wav.py  nb_hsdatalog_converters.ipynb  nb_hsdatalog_core.ipynb
utils/python_sdk/HSD/: HSDatalog.py
utils/python_sdk/HSD/model/: AcquisitionInfo.py  DeviceConfig.py
utils/python_sdk/HSD/utils/: cli_interaction.py  file_manager.py  type_conversion.py
utils/python_sdk/HSD_link/: HSDLink.py
utils/python_sdk/HSD_link/communication/ADEV_HSD/: ADEVHSD_com_manager.py
utils/python_sdk/HSD_link/communication/STWIN_HSD/: STWINHSD_CMD_com_manager.py  STWINHSD_DLL_com_manager.py  STWINHSD_com_manager.py  STWINHSD_commands.py  hsd_dll.py
utils/python_sdk/HSD_utils/: converters.py  exceptions.py  logger.py
utils/python_sdk/Views/: cli_views.py
